# 4value-vector

./: CMakeLists.txt  README.md  main.cpp  tests-vec4state.cc  vec4state.cpp  vec4state.h  vec4stateException.h  vpi.h
tests/: CMakeLists.txt  tests.cc
